Updates to DHQ's pages on editorial policies and acceptance stats
Added language clarifying criteria for consideration; clarified language on acceptance rates; added information on indexing; updated the link language in the navigation menu.

--- a/submissions/cfps.html
+++ b/submissions/cfps.html
@@ -10,7 +10,7 @@
             <br /><a href="specialIssuesGuidelines.html">Special Issues</a> | <a
                 href="peerReviewing.html">Peer Reviewing for DHQ</a> | <a
                 href="publication_terms.html">Terms of Publication</a> | <a href="statistics.html"
-                >Statistics</a></p>
+                >Acceptance Rates and Indexing</a></p>
         <h1>Calls for Proposals</h1>
         <p class="print">&gt;&gt; <a onclick="window.print();return false;" href="#">Print
                 Guidelines</a></p>
