--- a/submissions/publication_terms.html
+++ b/submissions/publication_terms.html
@@ -7,7 +7,7 @@
         <p class="anchorNav"><a href="index.html">DHQ Submission Guidelines</a> | <a
                 href="textGuidelines.html">DHQ Style
                 Guidelines</a>
-                <br/><a href="specialIssuesGuidelines.html">Special Issues Guidelines</a> | <a href="peerReviewing.html">Peer Reviewing for DHQ</a> | Terms of Publication  | <a href="statistics.html">Statistics</a></p>
+                <br/><a href="specialIssuesGuidelines.html">Special Issues Guidelines</a> | <a href="peerReviewing.html">Peer Reviewing for DHQ</a> | Terms of Publication  | <a href="statistics.html">Acceptance Rates and Indexing</a></p>
         <h1>Terms of Publication for DHQ</h1>
         
         <p>The following are the terms of publication for all DHQ material:</p>
