--- a/submissions/specialIssuesGuidelines.html
+++ b/submissions/specialIssuesGuidelines.html
@@ -8,7 +8,7 @@
                 Guidelines</a> | <a href="cfps.html">CFPs</a> | <a href="textGuidelines.html">DHQ Style
                 Guidelines</a> | <a href="reviews.html">Review Articles</a>
             <br />Special
-                Issues | <a href="peerReviewing.html">Peer Reviewing for DHQ</a> | <a href="publication_terms.html">Terms of Publication</a>  | <a href="statistics.html">Statistics</a></p>
+                Issues | <a href="peerReviewing.html">Peer Reviewing for DHQ</a> | <a href="publication_terms.html">Terms of Publication</a>  | <a href="statistics.html">Acceptance Rates and Indexing</a></p>
         <h1>DHQ Special Issues</h1>
         <p class="print">&gt;&gt; <a onclick="window.print();return false;" href="#">Print
                 Guidelines</a></p>
