--- a/submissions/peerReviewing.html
+++ b/submissions/peerReviewing.html
@@ -8,7 +8,7 @@
                 Guidelines</a> | <a href="cfps.html">CFPs</a> | <a href="textGuidelines.html">DHQ Style
                 Guidelines</a> | <a href="reviews.html">Review Articles</a>
             <br /><a href="specialIssuesGuidelines.html">Special
-                Issues</a> | Peer Reviewing for DHQ | <a href="publication_terms.html">Terms of Publication</a>  | <a href="statistics.html">Statistics</a></p>
+                Issues</a> | Peer Reviewing for DHQ | <a href="publication_terms.html">Terms of Publication</a>  | <a href="statistics.html">Acceptance Rates and Indexing</a></p>
         <h1>Peer Reviewing for DHQ</h1>
         <p class="print">&gt;&gt; <a onclick="window.print();return false;" href="#">Print
                 Guidelines</a></p>
