--- a/submissions/textGuidelines.html
+++ b/submissions/textGuidelines.html
@@ -8,7 +8,7 @@
                 Guidelines</a> | <a href="cfps.html">CFPs</a> | DHQ Style
                 Guidelines | <a href="reviews.html">Review Articles</a>
             <br /><a href="specialIssuesGuidelines.html">Special
-                Issues</a> | <a href="peerReviewing.html">Peer Reviewing for DHQ</a> | <a href="publication_terms.html">Terms of Publication</a>  | <a href="statistics.html">Statistics</a></p>
+                Issues</a> | <a href="peerReviewing.html">Peer Reviewing for DHQ</a> | <a href="publication_terms.html">Terms of Publication</a>  | <a href="statistics.html">Acceptance Rates and Indexing</a></p>
         <h1>DHQ Style Guidelines</h1>
         <p class="print">&gt;&gt; <a onclick="window.print();return false;" href="#">Print
                 Guidelines</a></p>
