Reorganizing the test suite

--- a/about/about.html
+++ b/about/about.html
@@ -25,7 +25,7 @@
         </ul>
         <p>DHQ publishes a wide range of peer-reviewed materials, including:</p>
         <ul>
-            <li>Scholarly articles </li>
+            <li>Scholarly articles, case studies, and field reports </li>
             <li>Editorials and provocative opinion pieces </li>
             <li>Experiments in interactive media </li>
             <li>Reviews of books, web sites, new media art installations, digital humanities systems
