--- a/submissions/index.html
+++ b/submissions/index.html
@@ -44,6 +44,7 @@
    <li>Issues in Digital Humanities: Substantive, provocative opinion-driven essays of any length. </li>
    <li>Reviews: Reviews of other publications (digital or print), tools, artworks, conferences, and other relevant material. </li>
    <li>Case Studies: Detailed analyses of specific projects that contextualize the project within the DH field, and demonstrate its significance for other practitioners.</li>
+    <li>Field Reports: Reports on digital humanities-related practice from the perspective of a particular locale</li>
 </ul>
        <p>A submission in any category must meet the following basic standards for DHQ publication:</p>
        <ul>
