--- a/submissions/cfps.html
+++ b/submissions/cfps.html
@@ -14,37 +14,68 @@
         <h1>Calls for Proposals</h1>
         <p class="print">&gt;&gt; <a onclick="window.print();return false;" href="#">Print
                 Guidelines</a></p>
-       <h2>Digital Humanities Quarterly Special Issue on Minimal Computing</h2>
-        <p>Guest editors: Alex Gil (Columbia University Libraries) and Roopika Risam (Salem State University)
-</p>
-        <p>Abstracts due January 30, 2020</p>
+        <!-- <h2>Special issue title</h2>
+     <p>Guest editors: [NAMES]</p>
+     <p>Abstracts due: [DATE]</p>
+     <p>Description (or subdivide with <h3>)</p>
+            
+            -->
+        <h2>Digital Humanities Quarterly Special Issue on Critical Code Studies</h2>
+        <p>Guest editors: Mark Marino and Jeremy Douglass</p>
+        <p>Abstracts due November 15, 2020</p>
         <h3>Special Issue Description</h3>
-        <p> This special issue of Digital Humanities Quarterly will bring together essays and case studies on the promises and limitations of minimal computing from historical, practical, and theoretical perspectives, as well as within the context of specific research projects and their environments. </p>
-        <p>Minimal computing can be defined as any form of digital or computational praxis done under some set of significant constraints of hardware, software, education, network capacity, power, agency or other factors. Within the context of digital humanities scholarship, minimal computing refers to such computing practices used for teaching, research, and the construction and maintenance of a hybrid -- digital and analog -- scholarly and cultural record. </p>
-        <p>Broadly construed, our scope is not limited to digital scholarship within the confines of universities and thus includes work undertaken in galleries, archives (institution and community-based), and libraries, as well as in collaboration with communities.
-In this issue, we strive for equity in gender and particularly encourage submission by women and gender minorities. We further actively seek to include at least one contribution from each of the following geographical areas: Latin America, Africa, and Asia. We are able to accept submissions in English, French, Portuguese, and Spanish.
-</p>
-        <h3>Suggested Topics</h3>
-<p>Topics can include but are not limited to:</p>
-<ul><li>Minimal hardware: aged machines, USBs, arduinos, simple circuits, etc.</li>
-    <li>Minimal computation: simple scripts, bash, tranductions, etc.</li>
-    <li>Static site generation</li>
-    <li>Teaching fundamentals of computing tied to subjects in the humanities and the humanistic social sciences</li>
-    <li>Forms of making-do in relation to computation: jugaad, hacktivism, DIY</li>
-    <li>Technological disobedience, i.e. using technologies in a way they were not intended</li>
-    <li>Marginal forms of knowledge and memory production involving computation</li>
-    <li>A critique of minimal or minimalist approaches undertaken by choice, rather than by necessity</li>
-    <li>Genealogies of minimalist forms of computation</li>
-    <li>Case studies on projects that address a multiplicity of costs (environment, bandwidth, access, maintenance, etc) and needs (publishing, remembrance, resistance, etc) with an overall reduction in complexity</li>
-    <li>Implications of minimal computing practices for universities, libraries and archives.</li>
-</ul>
+        <p>This special issue of Digital Humanities Quarterly will bring together essays and case
+            studies on the promises and limitations of critical code studies from historical,
+            practical, and theoretical perspectives, as well as within the context of specific
+            research projects and their environments, professional contexts, and arts practice. </p>
+        <p> Critical code studies is the application of hermeneutics from the humanities to the
+            interpretation of the extra-functional significance of computer source code. “Extra”
+            means “growing out from” rather than “outside of.” Critical code studies readings
+            explore technosocial culture through the entry point of computer source code. </p>
+        <p> In this issue we will strive for equity in gender, race and ethnicity both in the
+            authorship of articles and the authorship of the code being examined. </p>
+        <h3> Suggested Topics</h3>
+        <p>Theoretical lenses and approaches can include but are not limited to:</p>
 
-<h3>Submission Formats</h3>
-<p>The special issue will consist of two sections: The first section will be reserved for scholarly arguments grounded in history or well argued theoretical work on minimal computing, and the second section will include case studies in the form of specific projects or deep descriptions of environments that pose particular challenges or constraints for digital scholarship and strategic responses to them that incorporate minimal computing practices. </p><p>
-In the first section, we welcome historical perspectives on minimal computing that place contemporary practices in dialogue with multiple documented genealogies; theoretical or strategic pieces that examine socio-technical implications of these practices at scale today; and critical or skeptical voices who are familiar with the implications of minimal computing and the informal discussions and practices that have taken place in the recent past. </p><p>
-For the second section we welcome deep descriptions of projects and environments that include, extend, and complicate minimal computing practices, prompting meditations on difference and imperfect similarity between multiple projects or environments. These case studies should help mainstream audiences understand the granular thinking behind design decisions that respond to specific constraints and challenges.</p>
-<h3>Submission Details</h3>
-        <p>We ask that you send your abstracts (max. 500 words) to <a href="mailto:rrisam@salemstate.edu">rrisam@salemstate.edu</a> and <a href="mailto:agil@columbia.edu">agil@columbia.edu</a> by January 30, 2020 for a first round of review. Early inquiries are encouraged. We will notify all submitters of the status of their submission in late February. If you are invited to submit a full-length article (~4,000-8,000 words) or a case study (~2500 words), we ask that they be submitted by June 30, 2020.
-</p>
+        <ul>
+
+            <li>Accessibility</li>
+            <li> Algorithmic Accountability</li>
+            <li> Critical algorithm studies</li>
+            <li> Critical race theory</li>
+            <li> Ecological impact</li>
+            <li> Electronic literature</li>
+            <li> Ethics</li>
+            <li> Ethnoprogramming</li>
+            <li> Feminisms</li>
+            <li> Game studies</li>
+            <li> Indigenous programming</li>
+            <li> Media archaeology</li>
+            <li> Natural language processing</li>
+            <li> Platform studies</li>
+            <li> Postcolonialism</li>
+            <li> Queer theory</li>
+            <li> Rhetorical code studies</li>
+            <li> Software studies</li>
+        </ul>
+        <p> Intersectional applications of multiple approaches will be encouraged. Objects of study
+            may be code snippets, codework, or larger software but also programming paradigms,
+            languages, and communities. </p>
+        <h3> Submission Formats</h3>
+        <p> Articles are welcome in two forms: theoretical approaches (4000-8000 words) and case
+            studies (~2500 words). </p>
+        <p> Theoretical approaches will look broadly at critical approaches to code using various
+            critical theories. These may articles may make their case using various code examples
+            but will focus more on the overall approach. </p>
+        <p> Case studies will feature close readings of particular snippets of code. Based on the
+            code critiques model of the Critical Code Studies Working Groups, these code readings
+            should begin with the code they will analyze, followed by a brief description of the
+            code’s functioning, before the interpretation of the overall code. </p>
+        <h3> Submission Details</h3>
+        <p> Please submit abstracts (max. 500 words) to markcmarino@gmail.com and
+            jeremydouglass@gmail.com by Nov. 15, 2020 for a first round of review. Early inquiries
+            are encouraged. If you are invited to submit a full-length article (~4,000-8,000 words)
+            or a case study (~2500 words), we ask that they be submitted by March 1, 2021. </p>
+
     </body>
 </html>
