Adding information about indexing and repositories
Adding information about indexing and repositories, and updating COVID info

--- a/announcements/index.html
+++ b/announcements/index.html
@@ -5,10 +5,13 @@
     </head>
     <body>
         <h1>Announcements</h1>
-       <h2>Suspension of Spring 2020 submission deadline</h2>
-        <p>DHQ will be suspending its April 2020 submission deadline, to give the journal an opportunity to focus its resources on essential production work during the disruption of the COVID-19 pandemic. We are currently planning to reopen submissions with our July 2020 submission deadline, but those plans depend on developments over the next few months. The journal's publication schedule will be uninterrupted. We are grateful to potential authors for their understanding!</p>
+       <h2>Submissions resumed as normal</h2>
+        <p>DHQ has returned to its regular submission schedule.</p>
         
        <h1>Archive of Past Announcements</h1>
+       <h2>Suspension of Spring 2020 submission deadline</h2>
+        <p>DHQ will be suspending its April 2020 submission deadline, to give the journal an opportunity to focus its resources on essential production work during the disruption of the COVID-19 pandemic. We are currently planning to reopen submissions with our July 2020 submission deadline, but those plans depend on developments over the next few months. The journal's publication schedule will be uninterrupted. We are grateful to potential authors for their understanding!</p>
+
         <h2 id="reviews_editor">Call for Applications: Contributing Reviewers</h2>
         <p>DHQ is seeking new Contributing Reviewers to write reviews of all forms of digital humanities publication. The reviewers work as a team, led by the Reviews Editors, to produce reviews of books, software tools, digital publications, and other appropriate reviewable content. Our goal is to cultivate an active, international group of reviewers who can cover the full range of DH-related topics and publications in multiple languages.
 </p><p>
