--- a/submissions/index.html
+++ b/submissions/index.html
@@ -30,6 +30,7 @@
         </ul>
         
         <h2 id="logistics">Submitting an Article</h2>
+       <p><em><a href="http://openjournals.neu.edu/ojs/dhq">Submit an article</a></em></p>
        <p>DHQ invites submissions at rolling three-month intervals with deadlines on January 15, April 15, July 15, and October 15.  
            
            <!-- After suspending its April 2020 submission deadline, DHQ is reopening submissions and reviewing with our July 2020 submission deadline. The journal's publication schedule will be uninterrupted. We are grateful to potential authors for their understanding! -->
