Adding missing publication date and vol/issue information for 14.3

--- a/submissions/statistics.html
+++ b/submissions/statistics.html
@@ -77,6 +77,7 @@
 			<tr>
 				<th>DHQ Acceptance Counts</th>
 					<th>Total</th>
+					<th>2020</th>
 					<th>2019</th>
 					<th>2018</th>
 					<th>2017</th>
@@ -98,7 +99,8 @@
 			</tr>
 			<tr>
 				<td align="right">submissions</td> <!-- regular -->
-				<td>658</td> <!-- total -->
+				<td>1029</td> <!-- total -->
+				<td>92</td> <!-- 2020 -->
 				<td>78</td> <!-- 2019 -->
 				<td>93</td> <!-- 2018 -->
 				<td>83</td> <!-- 2017 -->
@@ -117,8 +119,9 @@
 			</tr>
 			<tr>
 				<td align="right">decisions</td> <!-- regular -->
-				<td>627</td> <!-- total -->
-				<td>65 (pending)</td> <!-- 2019 -->
+				<td>689</td> <!-- total -->
+				<td>53 (pending)</td> <!-- 2020 -->
+				<td>70 (pending)</td> <!-- 2019 -->
 				<td>82</td> <!-- 2018 -->
 				<td>80</td> <!-- 2017 -->
 				<td>92</td> <!-- 2016 -->
@@ -136,8 +139,9 @@
 			</tr>
 			<tr>
 				<td align="right">accepted</td> <!-- regular -->
-				<td>250</td> <!-- total -->
-				<td>18 (pending)</td> <!-- 2019 -->
+				<td>260</td> <!-- total -->
+				<td>6 (pending)</td> <!-- 2020 -->
+				<td>21 (pending)</td> <!-- 2019 -->
 				<td>28</td> <!-- 2018 -->
 				<td>25</td> <!-- 2017 -->
 				<td>40</td> <!-- 2016 -->
@@ -155,8 +159,9 @@
 			</tr>
 			<tr>
 				<td align="right">published</td> <!-- regular -->
-				<td>226</td> <!-- total -->
-				<td>8 (pending)</td> <!-- 2019 -->
+				<td>230</td> <!-- total -->
+				<td>3 (pending)</td> <!-- 2020 -->
+				<td>9 (pending)</td> <!-- 2019 -->
 				<td>28</td> <!-- 2018 -->
 				<td>22</td> <!-- 2017 -->
 				<td>33</td> <!-- 2016 -->
@@ -178,6 +183,7 @@
 			<tr>
 				<td align="right">submissions</td> <!-- special -->
 				<td>241</td> <!-- total -->
+				<td>38</td> <!-- 2020 -->
 				<td>53</td> <!-- 2019 -->
 				<td>9</td> <!-- 2018 -->
 				<td>19</td> <!-- 2017 -->
@@ -197,7 +203,8 @@
 			<tr>
 				<td align="right">decisions</td> <!-- special -->
 				<td>206</td> <!-- total -->
-				<td>20 (pending)</td> <!-- 2019 -->
+				<td>8 (pending)</td> <!-- 2020 -->
+				<td>47</td> <!-- 2019 -->
 				<td>7</td> <!-- 2018 -->
 				<td>19</td> <!-- 2017 -->
 				<td>40</td> <!-- 2016 -->
@@ -216,7 +223,8 @@
 			<tr>
 				<td align="right">accepted</td> <!-- special -->
 				<td>180</td> <!-- total -->
-				<td>20 (pending)</td> <!-- 2019 -->
+				<td> (pending)</td> <!-- 2020 -->
+				<td>20 </td> <!-- 2019 -->
 				<td>6</td> <!-- 2018 -->
 				<td>18</td> <!-- 2017 -->
 				<td>35</td> <!-- 2016 -->
@@ -235,7 +243,8 @@
 			<tr>
 				<td align="right">published</td> <!-- special -->
 				<td>178</td> <!-- total -->
-				<td>20 (pending)</td> <!-- 2019 -->
+				<td> (pending)</td> <!-- 2020 -->
+				<td>20</td> <!-- 2019 -->
 				<td>6</td> <!-- 2018 -->
 				<td>18</td> <!-- 2017 -->
 				<td>34</td> <!-- 2016 -->
@@ -257,6 +266,7 @@
 			<tr>
 				<td align="right">submissions</td> <!-- all -->
 				<td>899</td> <!-- total -->
+				<td></td> <!-- 2020 -->
 				<td>131</td> <!-- 2019 -->
 				<td>102</td> <!-- 2018 -->
 				<td>102</td> <!-- 2017 -->
@@ -276,7 +286,8 @@
 			<tr>
 				<td align="right">decisions</td> <!-- all -->
 				<td>833</td> <!-- total -->
-				<td>85 (pending)</td> <!-- 2019 -->
+				<td> (pending)</td> <!-- 2020 -->
+				<td>85</td> <!-- 2019 -->
 				<td>89</td> <!-- 2018 -->
 				<td>99</td> <!-- 2017 -->
 				<td>132</td> <!-- 2016 -->
@@ -295,7 +306,8 @@
 			<tr>
 				<td align="right">accepted</td> <!-- all -->
 				<td>430</td> <!-- total -->
-				<td>38 (pending)</td> <!-- 2019 -->
+				<td> (pending)</td> <!-- 2020 -->
+				<td>38</td> <!-- 2019 -->
 				<td>34</td> <!-- 2018 -->
 				<td>43</td> <!-- 2017 -->
 				<td>75</td> <!-- 2016 -->
@@ -314,6 +326,7 @@
 			<tr>
 				<td align="right">published</td> <!-- all -->
 				<td>404</td> <!-- total -->
+				<td> (pending)</td> <!-- 2020 -->
 				<td>28 (pending)</td> <!-- 2019 -->
 				<td>34</td> <!-- 2018 -->
 				<td>40</td> <!-- 2017 -->
@@ -337,6 +350,7 @@
 		<tr>
 			<th>DHQ Acceptance Rates</th>
 				<th>Total</th>
+				<th>2020</th>
 				<th>2019</th>
 				<th>2018</th>
 				<th>2017</th>
@@ -359,6 +373,7 @@
 		<tr>
 			<td align="right">published/submitted</td>
 				<td>0.34</td> <!-- total -->
+				<td>0.10 (pending)</td> <!-- 2020 -->
 				<td>0.10 (pending)</td> <!-- 2019 -->
 				<td>0.30</td> <!-- 2018 -->
 				<td>0.27</td> <!-- 2017 -->
@@ -378,6 +393,7 @@
 		<tr>
 			<td align="right">accepted/submitted</td>
 				<td>0.38</td> <!-- total -->
+				<td>0.23 (pending)</td> <!-- 2020 -->
 				<td>0.23 (pending)</td> <!-- 2019 -->
 				<td>0.30</td> <!-- 2018 -->
 				<td>0.30</td> <!-- 2017 -->
@@ -397,6 +413,7 @@
 		<tr>
 			<td align="right">published/decisions</td>
 				<td>0.36</td> <!-- total -->
+				<td>0.12 (pending)</td> <!-- 2020 -->
 				<td>0.12 (pending)</td> <!-- 2019 -->
 				<td>0.34</td> <!-- 2018 -->
 				<td>0.28</td> <!-- 2017 -->
@@ -419,6 +436,7 @@
 		<tr>
 			<td align="right">published/submitted</td>
 				<td>0.74</td> <!-- total -->
+				<td>0.38 (pending)</td> <!-- 2020 -->
 				<td>0.38 (pending)</td> <!-- 2019 -->
 				<td>0.67</td> <!-- 2018 -->
 				<td>0.95</td> <!-- 2017 -->
@@ -438,6 +456,7 @@
 		<tr>
 			<td align="right">accepted/submitted</td>
 				<td>0.75</td> <!-- total -->
+				<td>0.38 (pending)</td> <!-- 2020 -->
 				<td>0.38 (pending)</td> <!-- 2019 -->
 				<td>0.67</td> <!-- 2018 -->
 				<td>0.95</td> <!-- 2017 -->
@@ -457,6 +476,7 @@
 		<tr>
 			<td align="right">published/decisions</td>
 				<td>0.86</td> <!-- total -->
+				<td>1.00 (pending)</td> <!-- 2020 -->
 				<td>1.00 (pending)</td> <!-- 2019 -->
 				<td>0.86</td> <!-- 2018 -->
 				<td>0.95</td> <!-- 2017 -->
