added call for general editors, created announcements archive

--- a/announcements/index.html
+++ b/announcements/index.html
@@ -5,37 +5,56 @@
     </head>
     <body>
         <h1>Announcements</h1>
-       <h2>Submissions resumed as normal</h2>
-        <p>DHQ has returned to its regular submission schedule.</p>
-        
-       <h1>Archive of Past Announcements</h1>
-       <h2>Suspension of Spring 2020 submission deadline</h2>
-        <p>DHQ will be suspending its April 2020 submission deadline, to give the journal an opportunity to focus its resources on essential production work during the disruption of the COVID-19 pandemic. We are currently planning to reopen submissions with our July 2020 submission deadline, but those plans depend on developments over the next few months. The journal's publication schedule will be uninterrupted. We are grateful to potential authors for their understanding!</p>
-
-        <h2 id="reviews_editor">Call for Applications: Contributing Reviewers</h2>
-        <p>DHQ is seeking new Contributing Reviewers to write reviews of all forms of digital humanities publication. The reviewers work as a team, led by the Reviews Editors, to produce reviews of books, software tools, digital publications, and other appropriate reviewable content. Our goal is to cultivate an active, international group of reviewers who can cover the full range of DH-related topics and publications in multiple languages.
-</p><p>
-You are: a wide reader, passionate about some area of digital humanities, interested in helping to shape the field, able to work as part of a geographically distributed team.
-</p><p>
-We are: an open-access online journal of digital humanities, published by the Alliance of Digital Humanities Organizations at http://www.digitalhumanities.org/dhq/. We publish a wide range of material on all areas of digital humanities research and practice. Although the journal is published almost entirely in English, we are interested in reviewing DH publications from all languages.
-</p><p>
-To apply, please send email to DHQ at neu dot edu with the following information:
-</p><ul>
-    <li>1. Background: who are you and what do you do?</li><li>
-2. What do you think makes for a good book, site, or software review?</li><li>
-3. In what geographic or linguistic areas could you cultivate a pool of reviewers? How would you go about cultivating such a pool?</li><li>
-4. With what research domain(s) within the DH research community are you most closely connected?</li><li>
-5. What is the realistic time commitment you could make to this role? How would it fit in with your other activities?</li>
-</ul>
-        <h2 id="reviewers">Call for Peer Reviewers</h2>
-        <p>DHQ is recruiting peer reviewers in all areas of digital humanities. Visit the <a
-                href="/dhq/submissions/peerReviewing.html">Peer Reviewing page</a>
-            for more information or to volunteer.</p>
-        <h2 id="submissions">Call for Submissions</h2>
-        <p>DHQ welcomes submissions of articles, reviews, and opinion pieces in all areas of the
-            digital humanities. All materials are peer-reviewed. Consult the <a
-                href="/dhq/submissions/index.html">Submission Guidelines</a> for information
-            about content and format requirements.</p>
-<!--Adding stuff to test SVN repo-->
+        <h2>Call for Nominations and Applications: DHQ General Editor</h2>
+        <p>July 24, 2021</p>
+        <p> Digital Humanities Quarterly invites nominations and applications for a new General
+            Editor to join the journal’s senior editorial team. This call is the first step in a
+            longer process of updating DHQ’s editorial structure and practices, and the incoming
+            editor will play a key role in helping us to reshape the journal’s larger editorial
+            team, review and update editorial workflows, and put the journal on a secure footing for
+            its next 15 years of operation. In particular we are seeking to diversify the journal’s
+            staffing and bring in new voices. Scholars of color, underrepresented minorities, and
+            people from the global South are strongly encouraged to apply. The new editor would join
+            the team in early 2022 for a five-year term (renewable). The deadline for nominations is
+            September 1, 2021, and the deadline for applications is October 1, 2021. </p>
+        <p> Founded in 2005, DHQ is an open-access, peer-reviewed journal of digital humanities,
+            published by the Association of Computers and the Humanities and the Alliance of Digital
+            Humanities Organizations. Editorial operations are currently hosted at Northeastern
+            University and Indiana University. DHQ publishes articles, case studies, field reports,
+            and reviews across the range of digital humanities domains. </p>
+        <p> We seek someone who will contribute vision and energy to the journal’s long-term
+            planning. Candidates should have a strong background in digital humanities, whether as a
+            practitioner, faculty member, public servant, researcher, or other role. No specific
+            experience is required, but applicants and nominees should have a commitment to and
+            interest in open-access publishing and digital modes of publication, as well as to
+            open-source development practices and open data. Experience with managing complex
+            collaborative projects, developing funding proposals, or navigating the evolving waters
+            of the digital humanities field would all be valuable. </p>
+        <p> The time commitment is roughly one to three hours per week on average, but more at some
+            times than others, and likely quite a bit more at the start. The position’s
+            responsibilities and activities include:</p>
+        <ul>
+            <li>Meeting monthly as part of the general editor team</li>
+            <li> Contributing to the management of the journal’s operations. Possibilities include
+                helping to coordinate the effort of the editorial board, contributing to or coordinating work on
+                large-scale projects, maintaining connections with other journals and relevant
+                institutions</li>
+            <li> Contributing to a specific aspect of the journal’s leadership, depending on
+                expertise and interests</li>
+            <li> Contributing to the development and oversight of funding proposals </li>
+        </ul>
+        <p> To nominate someone, submit a short nomination statement and contact information for the
+            nominee via <a href="https://docs.google.com/forms/d/e/1FAIpQLSfHUmYNhXsiVbC2jZ1cjv9uk-PIV43Fx3HRlAhXPKAhaLt1Pg/viewform"
+                >the nomination form</a>. The deadline for nominations is September 1.</p>
+        <p> To apply, complete <a        href="https://docs.google.com/forms/d/e/1FAIpQLSci6BQpuMcaLRQKX3c80kkJH7IegVpVXv9Nngg7-ykczCSODw/viewform"
+                >the application form</a> which requests:</p>
+        <ul>
+            <li>Your contact information</li>
+            <li> A short statement of interest (1-2 pages), including thoughts about your vision for
+                the journal and how you would contribute</li>
+            <li> A CV or resumé</li>
+        </ul>
+        <p> The deadline for applications is October 1.</p>
+        <p> For questions and information, contact Julia Flanders at j.flanders@northeastern.edu. </p>
     </body>
 </html>
