--- a/submissions/textGuidelines.html
+++ b/submissions/textGuidelines.html
@@ -73,6 +73,8 @@
         <p>Do not type a label or caption on a graphic, but include it in the main body of your
             text. To ensure correct matching up of tables/figures to captions, include a reference
             to the filename of the graphic in the text where the graphic should be included.</p>
+        <h2>Mathematical expressions and formulas</h2>
+        <p>DHQ represents mathematical expressions and formulas using TeX or MathML. Simple mathematical expressions and formulas can usually be converted automatically as part of our initial conversion routine using OxGarage. More complex formulas may cause problems for conversion. For the initial submission, it is fine to include formulas directly in the article. If the article is accepted, we will ask you to submit a finalized version in which the formulas are indicated in the text with a label (e.g. "formula 1"), and with the actual formulas submitted in TeX or valid MathML in a separate document, so that they can be inserted into the XML at the appropriate places.</p>
         <h2>Labeled examples</h2>
         <p>Like figures, examples (which may include code samples) may have labels and descriptive
             captions, both of which should have the first word capitalized. They may also be
