--- a/about/about.html
+++ b/about/about.html
@@ -55,7 +55,7 @@
             DHQ's rubric, please <a href="mailto:editors@digitalhumanities.org">contact the
             editors</a>.</p>
         <h2 id="publishing">Publishing Policies</h2>
-        <p>All DHQ materials are published under an open-access license that gives authors permanent ownership of their work. DHQ retains a perpetual, non-exclusive right to publish the work and to include it in other aggregations and indexes to achieve broader impact and visibility. But authors are free to republish their work in any venue they choose; there are never any reprint fees and authors do not need DHQ's permission to reuse or reprint their work in any form. Authors are also free (and encouraged) to deposit a copy of their article in an institutional repository.</p>
+        <p>All DHQ materials are published under an open-access license that gives authors permanent ownership of their work. By default, DHQ publishes all content under a CC-BY-ND license, but authors may also specify a more permissive license (either CC-BY or CC0). DHQ retains a perpetual, non-exclusive right to publish the work and to include it in other aggregations and indexes to achieve broader impact and visibility. Authors are free to republish their work in any venue they choose. Authors do not need DHQ's permission to reuse or reprint their work in any form. Authors are also free (and encouraged) to deposit a copy of their article in an institutional or disciplinary repository. DHQ does not charge any fees of any kind.</p>
         <p>DHQ maintains a <a href="ethics_code.html">Code of Ethics</a> by which the journal is conducted.</p>
         <h2 id="technical">Technical Overview</h2>
         <p>DHQ is published on the web using an open-source XML-based publication system. We
