--- a/submissions/dhq_encoding_documentation.html
+++ b/submissions/dhq_encoding_documentation.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html class="client-nojs" lang="en" dir="ltr">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html lang="en" dir="ltr">
 <head>
 <meta charset="UTF-8"/>
 <title>DHQ encoding documentation - </title>
 
 </head>
-<body class="mediawiki ltr sitedir-ltr mw-hide-empty-elt ns-0 ns-subject page-DHQ_encoding_documentation rootpage-DHQ_encoding_documentation skin-vector action-view">		<div id="mw-page-base" class="noprint"></div>
+<body class="mediawiki ltr sitedir-ltr mw-hide-empty-elt ns-0 ns-subject page-DHQ_encoding_documentation rootpage-DHQ_encoding_documentation skin-vector action-view">		
+  <div id="mw-page-base" class="noprint"></div>
 		<div id="mw-head-base" class="noprint"></div>
 		<div id="content" class="mw-body" role="main">
 			<a id="top"></a>
@@ -13,7 +14,8 @@
 </div>
 <h1 id="firstHeading" class="firstHeading" lang="en">DHQ encoding documentation</h1>			<div id="bodyContent" class="mw-body-content">
 
-				<div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr"><div class="mw-parser-output"><p>This document provides an introduction to using the DHQ markup language. Because DHQ is a customization of TEI, most of the elements in DHQ markup are fully documented as part of the TEI Guidelines. This guide is intended to provide an overview of the DHQ document structure and information about good practice; it also documents the DHQ-specific elements and usages that may depart from standard TEI usage.
+				<div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
+				  <div class="mw-parser-output"><p>This document provides an introduction to using the DHQ markup language. Because DHQ is a customization of TEI, most of the elements in DHQ markup are fully documented as part of the TEI Guidelines. This guide is intended to provide an overview of the DHQ document structure and information about good practice; it also documents the DHQ-specific elements and usages that may depart from standard TEI usage.
 </p>
 <div id="toc" class="toc"><div class="toctitle" lang="en" dir="ltr"><h2>Contents</h2></div>
 <ul>
@@ -202,7 +204,6 @@
 <h4><span id="&lt;foreign&gt;"></span><span class="mw-headline" id=".3Cforeign.3E">&lt;foreign&gt;</span></h4>
 <p>The &lt;foreign&gt; element is used to encode words and phrases that are in a language other than that of the surrounding text. It carries an @xml:lang attribute which should always be used to indicate what language its contents are in. The values for the @xml:lang attribute are two-letter language codes as follows:
 </p>
-<div class="table-wrap">
 <div class="table-wrap">
 <table>
 <tbody><tr>
@@ -778,6 +779,8 @@ The notation attribute indicates which notation is being used:
 <ul><li>The MathML namespace needs to be declared on the root element</li>
 <li>The MathML encoding itself needs to EITHER have the MathML namespace on every MathML element, or needs to have a prefix declared (and used on every MathML element), or needs to declare the namespace on every &gt;math&lt; element (in which case the prefix is not needed for the child elements).</li></ul>
 </div>
-
+				</div>
+</div>
+		</div>
 	</body>
 </html>
