Updating announcements and CFPs

--- a/submissions/cfps_archive.html
+++ b/submissions/cfps_archive.html
@@ -15,6 +15,63 @@
         <p class="print">&gt;&gt; <a onclick="window.print();return false;" href="#">Print
                 Guidelines</a></p>
 
+        <h2>Digital Humanities Quarterly Special Issue on Critical Code Studies</h2>
+        <p>Guest editors: Mark Marino and Jeremy Douglass</p>
+        <p>Abstracts due November 15, 2020</p>
+        <h3>Special Issue Description</h3>
+        <p>This special issue of Digital Humanities Quarterly will bring together essays and case
+            studies on the promises and limitations of critical code studies from historical,
+            practical, and theoretical perspectives, as well as within the context of specific
+            research projects and their environments, professional contexts, and arts practice. </p>
+        <p> Critical code studies is the application of hermeneutics from the humanities to the
+            interpretation of the extra-functional significance of computer source code. “Extra”
+            means “growing out from” rather than “outside of.” Critical code studies readings
+            explore technosocial culture through the entry point of computer source code. </p>
+        <p> In this issue we will strive for equity in gender, race and ethnicity both in the
+            authorship of articles and the authorship of the code being examined. </p>
+        <h3> Suggested Topics</h3>
+        <p>Theoretical lenses and approaches can include but are not limited to:</p>
+
+        <ul>
+
+            <li>Accessibility</li>
+            <li> Algorithmic Accountability</li>
+            <li> Critical algorithm studies</li>
+            <li> Critical race theory</li>
+            <li> Ecological impact</li>
+            <li> Electronic literature</li>
+            <li> Ethics</li>
+            <li> Ethnoprogramming</li>
+            <li> Feminisms</li>
+            <li> Game studies</li>
+            <li> Indigenous programming</li>
+            <li> Media archaeology</li>
+            <li> Natural language processing</li>
+            <li> Platform studies</li>
+            <li> Postcolonialism</li>
+            <li> Queer theory</li>
+            <li> Rhetorical code studies</li>
+            <li> Software studies</li>
+        </ul>
+        <p> Intersectional applications of multiple approaches will be encouraged. Objects of study
+            may be code snippets, codework, or larger software but also programming paradigms,
+            languages, and communities. </p>
+        <h3> Submission Formats</h3>
+        <p> Articles are welcome in two forms: theoretical approaches (4000-8000 words) and case
+            studies (~2500 words). </p>
+        <p> Theoretical approaches will look broadly at critical approaches to code using various
+            critical theories. These may articles may make their case using various code examples
+            but will focus more on the overall approach. </p>
+        <p> Case studies will feature close readings of particular snippets of code. Based on the
+            code critiques model of the Critical Code Studies Working Groups, these code readings
+            should begin with the code they will analyze, followed by a brief description of the
+            code’s functioning, before the interpretation of the overall code. </p>
+        <h3> Submission Details</h3>
+        <p> Please submit abstracts (max. 500 words) to markcmarino@gmail.com and
+            jeremydouglass@gmail.com by Nov. 15, 2020 for a first round of review. Early inquiries
+            are encouraged. If you are invited to submit a full-length article (~4,000-8,000 words)
+            or a case study (~2500 words), we ask that they be submitted by March 1, 2021. </p>
+
       <h2>Digital Humanities Quarterly Special Issue on Minimal Computing</h2>
         <p>Guest editors: Alex Gil (Columbia University Libraries) and Roopika Risam (Salem State University)
 </p>
