Updates to People, taxonomy, sorting
Updates to People page; adding complexity to the keywords taxonomy; experimenting with bibliographic sorting

--- a/people/people.html
+++ b/people/people.html
@@ -216,7 +216,7 @@
         <p>The Managing Editors are responsible for managing the journal's submission, review, and production processes. They also undertake special projects as needed for the development of the journal.</p>
         <ul>
             <li>Avery Blankenship, Northeastern University</li>
-            <li>Roxanne Faure, Northeastern University</li>
+            <li>R. B. Faure, Northeastern University</li>
         </ul>
             
         <h2>Contributing Reviewers</h2>
