--- a/submissions/dhq_encoding_documentation.html
+++ b/submissions/dhq_encoding_documentation.html
@@ -483,10 +483,11 @@ out by new technology&lt;/quote&gt;
 </div>
 <h4><span id="&lt;bibl&gt;"></span><span class="mw-headline" id=".3Cbibl.3E">&lt;bibl&gt;</span></h4>
 <p>The &lt;bibl&gt; element is used to encode individual items in the bibliography for the article. In the future, most bibliographic items will be stored in a comprehensive bibliographic database and their data will be extracted and imported automatically into DHQ articles. However, all items will be represented by a &quot;stub&quot; &lt;bibl&gt; element, typically carrying an attribute that will point to the full bibliographic record in the database. Some items may be unsuitable for inclusion in Biblio, either because they are too odd or because they are too article-specific (e.g. &quot;Personal interview with the author, June 2008&quot;). These should receive a full bibliographic entry in the article itself.
-</p><p>The &lt;bibl&gt; element carries three attributes:
+</p><p>The &lt;bibl&gt; element carries four attributes:
 </p>
 <ul><li>@xml:id, which provides a unique identifier so that references in the text can point to their bibliographic item</li>
-<li>@label, which provides a string that can be automatically printed in the text as a reference (e.g. &quot;Liu 2008&quot;)</li>
+<li>@label, which provides a string that can be automatically printed in the text as a reference (e.g. &quot;Liu 2008&quot;); this is also used by default to create the sort order for the bibliography. DHQ's sorting follows the order of Unicode code point values, so all characters with diacritics will sort to follow Z. If a different sort order is needed, @sortKey can be used (see below).</li>
+  <li>@sortKey, which can be used when the value of @label does not produce the desired sort order. The value of @sortKey should correspond to the desired positioning within the sorted bibliography: e.g. "Epoisses" where the value of @label is "Époisses". </li>
 <li>@key, whose value is used as a lookup/link to the Biblio database.</li></ul>
 <p>The value of @xml:id should take the form lastnameYYYY, where YYYY is the four-digit year of publication. If there is more than one item by the same author in the same year, then letters may be used for disambiguation: smith2008a, smith2008b, etc. ID values should always be all lower case and should not contain diacritics or punctuation. For multi-author items, use the last name of the first author only.
 </p><p>The value of the @label attribute should be the label that will be displayed in the text when the item is cited, e.g. Smith 2008. The label should be the last name(s) of the authors plus the four-digit year of publication, separated by a space, without a comma. For example:
