--- a/submissions/dhq_encoding_documentation.html
+++ b/submissions/dhq_encoding_documentation.html
@@ -444,6 +444,18 @@
 <h4><span id="&lt;gi&gt;"></span><span class="mw-headline" id=".3Cgi.3E">&lt;gi&gt;</span></h4>
 <p>The &lt;gi&gt; element is used to encode the name of an XML element (without attributes). It will typically be formatted in a way that signals this fact: e.g. by enclosing it within angle brackets. For XML tags that include attributes, use &lt;code&gt; (and include the angle-bracket delimiters since those will not be supplied automatically).
 </p>
+<h4><span id="CodeLinking"/><span class="mw-headline" id=".3CCodeLinking.3E">Linking to code notebooks and data sets</span></h4>
+				    <p>To include a downloadable code notebook and/or data set with an article:
+</p>
+<ul>
+  <li>put the code notebook(s) into /resources/code within the article directory</li>
+  <li>put the data set (as a zip file) into /resources/data within the article directory</li>
+  <li>use &lt;ref&gt; with @target to link to these resources: e.g. &lt;ref target="../code/sample.ipynb"&gt;.
+</li>
+</ul>
+<p>If there are multiple code notebooks and the reader should just download them all as a group, the code notebooks can also be compressed as a zip file.
+  </p>
+				    
 <h3><span class="mw-headline" id="Quotation_and_Citation">Quotation and Citation</span></h3>
 <h4><span id="&lt;quote&gt;"></span><span class="mw-headline" id=".3Cquote.3E">&lt;quote&gt;</span></h4>
 <p>The &lt;quote&gt; element is used for quotations of material from outside the text (e.g. other articles, books, aphorisms, etc.).
