--- a/submissions/publication_terms.html
+++ b/submissions/publication_terms.html
@@ -12,12 +12,10 @@
         
         <p>The following are the terms of publication for all DHQ material:</p>
         <ol>
-            <li>The author warrants that the work being published is his or her original work, and
-                that he or she has secured any necessary permission to publish, quote, or include
+            <li>The author warrants that the work being published is their original work, and
+                that they have secured any necessary permission to publish, quote, or include
                 any images or other materials that come from sources outside the article</li>
-            <li> The author grants Digital Humanities Quarterly permission to publish and use his or
-                her name, institutional affiliation, email address, and the biographical details he
-                or she has sent us, in connection with the publication of the work.</li>
+            <li> The author grants Digital Humanities Quarterly permission to publish and use their name, institutional affiliation, email address, and the biographical details they have sent us, in connection with the publication of the work.</li>
             <li> The author grants Digital Humanities Quarterly a perpetual, non-exclusive right to
                 publish the work as part of the DHQ digital journal, in any form that we choose:
                 i.e. in its current form or in derived forms resulting from transformations,
@@ -25,9 +23,9 @@
                 frequency reports and other aggregated data) may not include direct citation of the
                 author.</li>
             <li>The author retains copyright over the work and is free to publish it in any other
-                venue or format he or she chooses, including pre-publication release and inclusion in an institutional or disciplinary repository.</li>
+                venue or format they choose, including pre-publication release and inclusion in an institutional or disciplinary repository.</li>
             <li>All materials are published by DHQ under an open-access model, and all of DHQ's content will always be freely available to all via the DHQ  web site. However, the author gives DHQ the right to permit the work to be aggregated or indexed by third parties, who may place restrictions on access to their sites and may compensate DHQ for access to DHQ content.</li>
-            <li> All materials published on the DHQ site are offered under a Creative Commons
+            <li>Unless the author chooses a more permissive license, all materials published on the DHQ site are offered under a Creative Commons
                 Attribution-No Derivatives license.</li>
             <li>DHQ does not impose any article submission charges, article processing charges, or costs of any kind upon authors.</li>
         </ol>
@@ -38,7 +36,7 @@
             <li><strong>Attribution</strong>. Readers must attribute the work in the manner specified by the author
                 or licensor (but not in any way that suggests that the author endorses them or their
                 use of the work).</li>
-                        <li><strong>No Derivative Works</strong>. Readers may not alter, transform, or build upon this work.
+            <li><strong>No Derivative Works</strong>. Readers may not alter, transform, or build upon this work.
                 However, terms of fair use apply and DHQ interprets these terms liberally. </li>
         </ul>
         <p> For any reuse or distribution, readers must make clear to others the license terms of
